# team-project

./: .gitignore  README.md  package-lock.json
backend/: .env  Cargo.toml
backend/database/: projekt_zespolowy.sqlite
backend/migrations/: db.sql
backend/src/: main.rs
frontend/: global.d.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/assets/: spisLekcji.ts
frontend/assets/styles/: global.css
frontend/components/: ClientOnly.tsx  LayoutDefault.tsx
frontend/components/app-provider/: AppProvider.tsx
frontend/components/example/: Example.tsx  style.module.css
frontend/components/game-loader/: GameLoader.tsx  style.module.css
frontend/components/lessons-contents/: Chapter1.tsx  Chapter2.tsx
frontend/components/nav/: Nav.tsx  style.module.css
frontend/components/quiz/: Finished.tsx  NotFound.tsx  Question.tsx  Start.tsx  style.module.css
frontend/components/results-history/: ResultsHistory.tsx
frontend/helpers/: axios.ts
frontend/hooks/: useAppContext.ts  useIsLogged.ts  useLessonData.ts  useLessonNavigation.ts  useQuizNavigation.ts
frontend/layouts/: LayoutDefault.tsx
frontend/pages/: +Head.tsx  +config.ts  +onPageTransitionEnd.ts
frontend/pages/_error/: +Page.tsx
frontend/pages/index/: +Layout.tsx  +Page.tsx  +data.ts  +onBeforePrerenderStart.ts  style.module.css
frontend/pages/konto/: +Layout.tsx  +Page.tsx
frontend/pages/lekcja/: +Layout.tsx
frontend/pages/logowanie/: +Layout.tsx  +Page.tsx  style.module.css
frontend/type/: ApiException.ts  ApiResponse.ts  Context.ts  Routes.ts
(+126 files in other folders)
