[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
#server
axum = "0.8.1"
tokio = { version =  "1.43.0",features = ["full"] }

#sql
sqlx = {version = "0.8.3", features = ["sqlite","runtime-tokio","tls-native-tls","macros","chrono"]}

#serde
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

dotenvy = "0.15.7"
rand = "0.8.5"
argon2 = "0.6.0-pre.1"
jsonwebtoken = "9.3.0"
validator = { version = "0.20.0", features = ["derive"] }
validator_derive = "0.20.0"
async-trait = "0.1.85"
axum-valid = "0.22.0"
headers = "0.4.0"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }

